enhance mousemove effect to position div and auto-remove after 2 seconds; add overflow hidden to prevent scroll

--- a/web effects using JavaScript/style.css
+++ b/web effects using JavaScript/style.css
@@ -21,4 +21,5 @@ html, body{
     height: 200px;
     width: 250px;
     background-color: yellow;
+    overflow: hidden;
 }
